fix sizing of text

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -489,7 +489,12 @@
                  Founder / Tableau Consultant
                 </p>
                 <p>
-                  Ben has been a student of the Business Intelligence space for 10+ years and recently added Full Stack Web Development to his qualifications. He is versed in the Tableau Suite and obtained his Tableau Desktop Qualified Associate certification in 2019. Loves to discuss strategy, business objectives, and user experience.
+                  Ben has been a student of the Business Intelligence space for 10+ years and recently added Full Stack Web Development to his qualifications.
+                </p>
+                <p>
+                  He is versed in the Tableau Suite and obtained his Tableau Desktop Qualified Associate certification in 2019.
+                </p>
+                <p>Ben loves to discuss strategy, business objectives, and user experience.
                 </p>
                 <div class='row'>
                   <button onClick= 'showBenEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
@@ -532,7 +537,16 @@
                   Founder / Oracle Consultant
                 </p>
                 <p>
-                  Zach brings 7+ years of Oracle BI implementation experience to the team! He received his certification in Oracle Analytics Cloud in 2017 and is heavily experienced with custom OBIEE 11g and 12c solutions. He has directly supported other Oracle Applications including Oracle Financials and HCM specializing in Oracle Security for these applications. During his BI projects he loves to spend time discussing the overall enterprise strategy towards system integration, data quality, and reporting solutions.
+                  Zach brings 7+ years of Oracle BI implementation experience to the team! 
+                </p>
+                <p>
+                  He received his certification in Oracle Analytics Cloud in 2017 and is heavily experienced with custom OBIEE 11g and 12c solutions. 
+                </p>
+                <p>
+                  He has directly supported Oracle Financials and HCM specializing in Oracle Security.
+                </p>
+                <p>
+                  Zach loves to discuss enterprise strategy related to system integration, data quality, and reporting solutions.
                 </p>
                 <div class='row'>
                   <button onClick= 'showZachEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
@@ -558,8 +572,6 @@
                     <div style='border-top: solid; border-color: white;'>
                     </div> 
                     <br>
-                    <div style='border-top: solid; border-color: white;'>
-                    </div>
                 </div>
               </div>
             </div>
