--- a/views/index.hbs
+++ b/views/index.hbs
@@ -593,9 +593,8 @@
         <p>&copy; Created by Lift LLC. All Rights Reserved.</p>
         <p>No affiliation with Tableau or Oracle.</p>
         <br>
-        <p>905 McGee St. #289, Kansas City, MO 64106</p>
         <p>(913) 297-9239</p>
-        <p>sales@liftkc.com</p>
+        <p>ben_newell@liftkc.com</p>
       </div>
     </footer>
 
