--- a/views/index.hbs
+++ b/views/index.hbs
@@ -594,7 +594,7 @@
         <p>No affiliation with Tableau or Oracle.</p>
         <br>
         <p>(816) 716-7891</p>
-        <p>ben_newell@liftkc.com</p>
+        <a>ben_newell@liftkc.com</a>
       </div>
     </footer>
 
