add pickleball subpage

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -504,6 +504,11 @@
                 </div>
                 <div id='benEngagements' style='display: none;'>
                     <br>
+                    <a>Data Analytics Manager</a>
+                    <br>
+                    <a style='color:#1B1B1E; font-size: 12px'>(SQL, Tableau Suite, Web Development) </a>
+                    <br>
+                    <br>
                     <a>Tableau Consultant / Programmer</a>
                     <br>
                     <a style='color:#1B1B1E; font-size: 12px'>(Tableau Suite, AWS, Python, Web Development)</a>
@@ -512,11 +517,7 @@
                     <br>
                     <a style='color:#1B1B1E; font-size: 12px'>(Tableau Suite)</a>
                     <br><br>
-	                  <a>Associate Business Data Specialist</a>
-                    <br>
-                    <a style='color:#1B1B1E; font-size: 12px'>(SQL, ETL, Tableau Desktop) </a>
-                    <br>
-                    <br>
+	                  
                     <div style='border-top: solid; border-color: white;'>
                     </div> 
                     <br>
