--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -103,79 +103,43 @@
         </div>
       </div>
     </nav>
-
-    <section id="intro" class="fade-scroll" display="block">
-      <div style="justify-content: center" class="container">
-        <div style="justify-content: center;" class="row">
-        </div>
-        <br />
-        <br />
-        <br />
-        <div>
-          <h1 id="title" style="color: #1B1B1E">
+    <div class="container mt-5 d-flex justify-content-center">
+      <div class="mlcard p-3">
+        <div class="d-flex align-items-center">
+          <div class="image">
             <img
-              id="yana"
-              style="height:100px; width: 100px; border-radius: 70%; border: 10px solid white;"
+              src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
+              class="rounded"
+              width="155"
             />
-
-            Yana Newell
-
-            <br />
-            <img
-              id="ben"
-              style="height:100px; width: 100px; border-radius: 70%; border: 10px solid white;"
-            />
-
-            Ben Newell
-
-          </h1>
-          <br />
-          <div style="width: 52vw; border-top: solid; border-color: white;">
-            <br />
           </div>
-          <h1 id="title">
-            PPA Touring Pros
-            <br />
-
-          </h1>
-          <h3 id="titleSubTop">
-            PUSH YOURSELF | EMBRACE IT
-          </h3>
-          <br /><br />
-          <div href="#about" class="row">
-            <button
-              onClick="showNewToAnalytics()"
-              style="font-size:15px; height: 50px; width:300px"
-              type="button"
-              class="btn btn-block btn-light"
-            >Book Lessons! <i class="fa fa-calendar-check-o"></i></button>
-          </div>&nbsp;
-          <div class="row">
-            <button
-              onClick="showTableau()"
-              style="font-size:15px; height: 50px; width:300px"
-              type="button"
-              class="btn btn-lg btn-block btn-light"
-            >Sponsors! <i class="fa fa-handshake-o"></i></button>
-            <div id="oracleButton" style="height: 10px"></div>
-            <br /><br /><br />
-            <button
-              onClick="showOracle()"
-              style="font-size:15px; height: 50px; width:300px"
-              type="button"
-              class="btn btn-lg btn-block btn-dark"
-            >Follow us! <i class="fa fa-instagram"></i></button>
-
-          </div>
-        </div>
-        <br />
-        <div style="justify-content: center" class="row">
-          <div class="col-4">
+          <div class="ml-3 w-100">
+            <h4 class="mb-0 mt-0">Chicken N Pickle Open</h4>
+            <span>Senior Journalist</span>
+            <div
+              class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats"
+            >
+              <div class="d-flex flex-column">
+                <span class="mlarticles">Articles</span>
+                <span class="number1">38</span>
+              </div>
+              <div class="d-flex flex-column">
+                <span class="mlfollowers">Followers</span>
+                <span class="mlnumber2">980</span>
+              </div>
+              <div class="d-flex flex-column">
+                <span class="mlrating">Rating</span>
+                <span class="number3">8.9</span>
+              </div>
+            </div>
+            <div class="button mt-2 d-flex flex-row align-items-center">
+              <button class="btn btn-sm btn-outline-primary w-100">Chat</button>
+              <button class="btn btn-sm btn-primary w-100 ml-2">Follow</button>
+            </div>
           </div>
         </div>
       </div>
-    </section>
-
+    </div>
     <div style="border-top: solid; border-color: white;">
     </div>
 
