added yana and ben cards

--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -103,43 +103,94 @@
         </div>
       </div>
     </nav>
-    <div class="container mt-5 d-flex justify-content-center">
-      <div class="mlcard p-3">
-        <div class="d-flex align-items-center">
-          <div class="image">
-            <img
-              src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
-              class="rounded"
-              width="155"
-            />
-          </div>
-          <div class="ml-3 w-100">
-            <h4 class="mb-0 mt-0">Chicken N Pickle Open</h4>
-            <span>Senior Journalist</span>
-            <div
-              class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats"
-            >
-              <div class="d-flex flex-column">
-                <span class="mlarticles">Articles</span>
-                <span class="number1">38</span>
-              </div>
-              <div class="d-flex flex-column">
-                <span class="mlfollowers">Followers</span>
-                <span class="mlnumber2">980</span>
-              </div>
-              <div class="d-flex flex-column">
-                <span class="mlrating">Rating</span>
-                <span class="number3">8.9</span>
-              </div>
+    <div class="container">
+
+      <div class="card-profile">
+        <div
+          class="card-profile_visual"
+          style='  background: url("../images/yana3.jpg") no-repeat center center/cover; filter: grayscale(30%);'
+        ></div>
+
+        <div class="card-profile_user-infos">
+          <span class="infos_name">Yana (Grechkina) Newell</span>
+          <span class="infos_nick"></span>
+
+          <a href="#"></a>
+        </div>
+
+        <div class="card-profile_user-stats">
+          <div class="stats-holder">
+            <div class="user-stats">
+              <strong>Highest PPA </br>Doubles</strong>
+              <span>16</span>
             </div>
-            <div class="button mt-2 d-flex flex-row align-items-center">
-              <button class="btn btn-sm btn-outline-primary w-100">Chat</button>
-              <button class="btn btn-sm btn-primary w-100 ml-2">Follow</button>
+            <div class="user-stats">
+              <strong>Highest PPA </br>Mixed </strong>
+              <span>14</span>
+            </div>
+            <div class="user-stats">
+              <strong>Highest PPA </br>Singles </strong>
+              <span>10</span>
+            </div>
+            <div class="user-stats">
+              <strong>DUPR </br>Doubles</strong>
+              <span>5.83</span>
+            </div>
+            <div class="user-stats">
+              <strong>DUPR </br>Singles</strong>
+              <span>5.70</span>
             </div>
           </div>
         </div>
+
       </div>
+
     </div>
+
+    <div class="container">
+
+      <div class="card-profile">
+        <div
+          class="card-profile_visual"
+          style='  background: url("../images/ben3.jpg") no-repeat center center/cover;  filter: grayscale(30%);'
+        ></div>
+
+        <div class="card-profile_user-infos">
+          <span class="infos_name">Ben Newell</span>
+          <span class="infos_nick"></span>
+
+          <a href="#"></a>
+        </div>
+
+        <div class="card-profile_user-stats">
+          <div class="stats-holder">
+            <div class="user-stats">
+              <strong>Highest PPA </br>Doubles</strong>
+              <span>17</span>
+            </div>
+            <div class="user-stats">
+              <strong>Highest PPA </br>Mixed </strong>
+              <span>17</span>
+            </div>
+            <div class="user-stats">
+              <strong>Highest PPA </br>Singles </strong>
+              <span>27</span>
+            </div>
+            <div class="user-stats">
+              <strong>DUPR </br>Doubles</strong>
+              <span>6.24</span>
+            </div>
+            <div class="user-stats">
+              <strong>DUPR </br>Singles</strong>
+              <span>6.66</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
     <div style="border-top: solid; border-color: white;">
     </div>
 
