clean up bootstrap

--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -112,7 +112,7 @@
                 <button
                   type="button"
                   class="btn btn-sm btn-primary"
-                >Book Lessons</button>
+                >Lessons</button>
                 <button
                   type="button"
                   class="btn btn-sm btn-success"
