--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -97,7 +97,74 @@
           </p>
         </div>
       </section>
-      <div class="col-md-4">
+      <div class="row">
+      <div id='yanasection'  class="col-md-6">
+        <div class="card mb-4 box-shadow rounded">
+          <img
+          id="yana"
+            class="card-img-top rounded"
+            style="height: 30vh; width: 100%; display: block;"
+            
+          />
+          <div class="card-body">
+            <h1 class="jumbotron-heading">Yana Grechkina</h1>
+            <p class="card-text">PPA Touring Pro</p>
+            <div class="d-flex justify-content-between align-items-center">
+                <button
+                  type="button"
+                  class="btn btn-sm btn-primary"
+                >Lessons</button>
+                <button
+                  type="button"
+                  class="btn btn-sm btn-success"
+                >Sponsors</button>
+                <button
+                  type="button"
+                  class="btn btn-sm btn-secondary"
+                >About</button>
+            </div>
+            </br>
+            <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br> Doubles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">9th</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br>Singles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">10th</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br>Mixed</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">16th</span>
+            </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">DUPR </br>Doubles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">8.24</span>
+            </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">DUPR </br>Singles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">6.66</span>
+            </li>
+          </ul>
+          </div>
+        </div>
+      </div>
+      <div id='bensection' class="col-md-6">
         <div class="card mb-4 box-shadow rounded">
           <img
           id="ben"
@@ -122,9 +189,47 @@
                   class="btn btn-sm btn-secondary"
                 >About</button>
             </div>
-            
+            </br>
+            <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br> Doubles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">17th</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br>Singles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">27th</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br>Mixed</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">51st</span>
+            </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">DUPR </br>Doubles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">6.24</span>
+            </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">DUPR </br>Singles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">6.66</span>
+            </li>
+          </ul>
           </div>
         </div>
+      </div>
       </div>
       <!-- FOOTER -->
       <footer class="container">
