--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -87,85 +87,74 @@
     <main role="main">
       </main>
       </br>
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Album example</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-          <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-          </p>
+      <div class="container">
+            <h4>Timeline Style : Demo-10</h4>
+            <div class="row">
+                <div class="main-timeline10">
+                    <div class="col-md-3 col-sm-6 timeline">
+                        <div class="timeline-inner">
+                            <div class="year">2015</div>
+                            <div class="timeline-content">
+                                <div class="post">Web Desginer</div>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ullamcorper odio. Phasellus congue varius placerat. Quisque vel purus convallis.
+                                </p>
+                            </div>
+                            <div class="timeline-icon">
+                                <i class="fa fa-globe"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 timeline">
+                        <div class="timeline-inner">
+                            <div class="year">2016</div>
+                            <div class="timeline-content">
+                                <div class="post">Web Developer</div>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ullamcorper odio. Phasellus congue varius placerat. Quisque vel purus convallis.
+                                </p>
+                            </div>
+                            <div class="timeline-icon">
+                                <i class="fa fa-rocket"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 timeline">
+                        <div class="timeline-inner">
+                            <div class="year">2018</div>
+                            <div class="timeline-content">
+                                <div class="post">Web Desginer</div>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ullamcorper odio. Phasellus congue varius placerat. Quisque vel purus convallis.
+                                </p>
+                            </div>
+                            <div class="timeline-icon">
+                                <i class="fa fa-briefcase"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 timeline">
+                        <div class="timeline-inner">
+                            <div class="year">2017</div>
+                            <div class="timeline-content">
+                                <div class="post">Web Developer</div>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ullamcorper odio. Phasellus congue varius placerat. Quisque vel purus convallis.
+                                </p>
+                            </div>
+                            <div class="timeline-icon">
+                                <i class="fa fa-camera"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </section>
+        <hr>
       <div class="row">
       
-      <div id='bensection' class="col-md-6">
-        <div class="card mb-4 box-shadow rounded">
-          <img
-          id="ben"
-            class="card-img-top rounded"
-            style="height: 30vh; width: 100%; display: block;"
-            
-          />
-          <div class="card-body">
-            <h1 class="jumbotron-heading">Ben Newell</h1>
-            <p class="card-text">PPA Touring Pro</p>
-            <div class="d-flex justify-content-between align-items-center">
-                <button
-                  type="button"
-                  class="btn btn-sm btn-primary"
-                >Lessons</button>
-                <button
-                  type="button"
-                  class="btn btn-sm btn-success"
-                >Sponsors</button>
-                <button
-                  type="button"
-                  class="btn btn-sm btn-secondary"
-                >About</button>
-            </div>
-            </br>
-            <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br> Doubles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">17th</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br>Singles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">27th</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Highest PPA </br>Mixed</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">51st</span>
-            </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">DUPR </br>Doubles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">6.24</span>
-            </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">DUPR </br>Singles</h6>
-                {{!-- <small class="text-muted">Brief description</small> --}}
-              </div>
-              <span class="font-weight-bold">6.66</span>
-            </li>
-          </ul>
-          </div>
-        </div>
-      </div>
-      <div id='yanasection'  class="col-md-6">
+      <div class="col-md-3"></div>
+      <div id='yanasection'  class="col-md-3">
         <div class="card mb-4 box-shadow rounded">
           <img
           id="yana"
@@ -231,7 +220,75 @@
           </div>
         </div>
       </div>
+      <div id='bensection' class="col-md-3">
+        <div class="card mb-4 box-shadow rounded">
+          <img
+          id="ben"
+            class="card-img-top rounded"
+            style="height: 30vh; width: 100%; display: block;"
+            
+          />
+          <div class="card-body">
+            <h1 class="jumbotron-heading">Ben Newell</h1>
+            <p class="card-text">PPA Touring Pro</p>
+            <div class="d-flex justify-content-between align-items-center">
+                <button
+                  type="button"
+                  class="btn btn-sm btn-primary"
+                >Lessons</button>
+                <button
+                  type="button"
+                  class="btn btn-sm btn-success"
+                >Sponsors</button>
+                <button
+                  type="button"
+                  class="btn btn-sm btn-secondary"
+                >About</button>
+            </div>
+            </br>
+            <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br> Doubles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">17th</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br>Singles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">27th</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Highest PPA </br>Mixed</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">51st</span>
+            </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">DUPR </br>Doubles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">6.24</span>
+            </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">DUPR </br>Singles</h6>
+                {{!-- <small class="text-muted">Brief description</small> --}}
+              </div>
+              <span class="font-weight-bold">6.66</span>
+            </li>
+          </ul>
+          </div>
+        </div>
       </div>
+      <div class="col-md-3"></div>
+      </div>
+      
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
