--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -87,70 +87,64 @@
     <main role="main">
       </main>
       </br>
-      <div class="container">
-            <h4>Timeline Style : Demo-10</h4>
-            <div class="row">
-                <div class="main-timeline10">
-                    <div class="col-md-3 col-sm-6 timeline">
-                        <div class="timeline-inner">
-                            <div class="year">2015</div>
-                            <div class="timeline-content">
-                                <div class="post">Web Desginer</div>
-                                <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ullamcorper odio. Phasellus congue varius placerat. Quisque vel purus convallis.
-                                </p>
-                            </div>
-                            <div class="timeline-icon">
-                                <i class="fa fa-globe"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 timeline">
-                        <div class="timeline-inner">
-                            <div class="year">2016</div>
-                            <div class="timeline-content">
-                                <div class="post">Web Developer</div>
-                                <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ullamcorper odio. Phasellus congue varius placerat. Quisque vel purus convallis.
-                                </p>
-                            </div>
-                            <div class="timeline-icon">
-                                <i class="fa fa-rocket"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 timeline">
-                        <div class="timeline-inner">
-                            <div class="year">2018</div>
-                            <div class="timeline-content">
-                                <div class="post">Web Desginer</div>
-                                <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ullamcorper odio. Phasellus congue varius placerat. Quisque vel purus convallis.
-                                </p>
-                            </div>
-                            <div class="timeline-icon">
-                                <i class="fa fa-briefcase"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 timeline">
-                        <div class="timeline-inner">
-                            <div class="year">2017</div>
-                            <div class="timeline-content">
-                                <div class="post">Web Developer</div>
-                                <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ullamcorper odio. Phasellus congue varius placerat. Quisque vel purus convallis.
-                                </p>
-                            </div>
-                            <div class="timeline-icon">
-                                <i class="fa fa-camera"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <div id='map' class="container-fluid py-5">
+          <div class="row">
+    <div class="col-lg-12">
+
+      <div class="horizontal-timeline">
+
+        <ul class="list-inline items">
+          <li class="list-inline-item items-list">
+            <div class="px-7">
+              <div class="event-date badge bg-info">Jan 12</div>
+              <h5 class="pt-2">PPA Masters</h5>
+              {{!-- <p style='height: 70px' class="text-muted">Jan 12th-15th</p> --}}
+              <div>
+                <a href="#" class="btn btn-primary btn-sm">Read more</a>
+              </div>
             </div>
-        </div>
-        <hr>
+          </li>
+          <li class="list-inline-item items-list">
+            <div class="px-7">
+              <div class="event-date badge bg-warning">Jan 26</div>
+              <h5 class="pt-2">MLP Palm Springs</h5>
+              {{!-- <p style='height: 70px' class="text-muted">Team CLEAN (Yana) | Team ATL Bouncers (Ben). --}}
+              {{!-- </p> --}}
+              <div>
+                <a href="#" class="btn btn-primary btn-sm">Read more</a>
+              </div>
+            </div>
+          </li>
+          <li class="list-inline-item items-list">
+            <div class="px-7">
+              <div class="event-date badge bg-info">Feb 1</div>
+              <h5 class="pt-2">PPA Desert Ridge</h5>
+              {{!-- <p style='height: 70px' class="text-muted">If several languages coalesce the grammar of the resulting simple and --}}
+                {{!-- regular</p> --}}
+              <div>
+                <a href="#" class="btn btn-primary btn-sm">Read more</a>
+              </div>
+            </div>
+          </li>
+          <li class="list-inline-item items-list">
+            <div class="px-7">
+              <div class="event-date badge bg-info">Feb 15</div>
+              <h5 class="pt-2">PPA Carvana</h5>
+              {{!-- <p style='height: 70px' class="text-muted">Languages only differ in their pronunciation and their most common words. --}}
+              {{!-- </p> --}}
+              <div>
+                <a href="#" class="btn btn-primary btn-sm">Read more</a>
+              </div>
+            </div>
+          </li>
+        
+        </ul>
+
+      </div>
+
+    </div>
+          </div>
+      </div>
       <div class="row">
       
       <div class="col-md-3"></div>
