add images to timeline

--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -97,7 +97,12 @@
           <li class="list-inline-item items-list">
             <div class="px-7">
               <div class="event-date badge bg-info">Jan 12</div>
-              <h5 class="pt-2">PPA Masters</h5>
+              <h5 class="pt-2"><img
+          id="ppa"
+            class=""
+            style="height: 60px; width: 60px;"
+            
+          /> Masters</h5>
               {{!-- <p style='height: 70px' class="text-muted">Jan 12th-15th</p> --}}
               <div>
                 <a href="#" class="btn btn-primary btn-sm">Read more</a>
@@ -107,7 +112,12 @@
           <li class="list-inline-item items-list">
             <div class="px-7">
               <div class="event-date badge bg-warning">Jan 26</div>
-              <h5 class="pt-2">MLP Palm Springs</h5>
+              <h5 class="pt-2"><img
+          id="mlp"
+            class=""
+            style="height: 60px; width: 60px;"
+            
+          />  Palm Springs</h5>
               {{!-- <p style='height: 70px' class="text-muted">Team CLEAN (Yana) | Team ATL Bouncers (Ben). --}}
               {{!-- </p> --}}
               <div>
@@ -118,7 +128,12 @@
           <li class="list-inline-item items-list">
             <div class="px-7">
               <div class="event-date badge bg-info">Feb 1</div>
-              <h5 class="pt-2">PPA Desert Ridge</h5>
+              <h5 class="pt-2"><img
+          id="ppa"
+            class=""
+            style="height: 60px; width: 60px;"
+            
+          />  Desert Ridge</h5>
               {{!-- <p style='height: 70px' class="text-muted">If several languages coalesce the grammar of the resulting simple and --}}
                 {{!-- regular</p> --}}
               <div>
@@ -129,7 +144,12 @@
           <li class="list-inline-item items-list">
             <div class="px-7">
               <div class="event-date badge bg-info">Feb 15</div>
-              <h5 class="pt-2">PPA Carvana</h5>
+              <h5 class="pt-2"><img
+          id="ppa"
+            class=""
+            style="height: 60px; width: 60px;"
+            
+          />  Carvana</h5>
               {{!-- <p style='height: 70px' class="text-muted">Languages only differ in their pronunciation and their most common words. --}}
               {{!-- </p> --}}
               <div>
