add images to timeline

--- a/views/pickleball.hbs
+++ b/views/pickleball.hbs
@@ -96,7 +96,7 @@
         <ul class="list-inline items">
           <li class="list-inline-item items-list">
             <div class="px-7">
-              <div class="event-date badge bg-info">Jan 12</div>
+              <div class="event-date badge bg-warning">Jan 12</div>
               <h5 class="pt-2"><img
           id="ppa"
             class=""
@@ -111,7 +111,7 @@
           </li>
           <li class="list-inline-item items-list">
             <div class="px-7">
-              <div class="event-date badge bg-warning">Jan 26</div>
+              <div class="event-date badge bg-secondary">Jan 26</div>
               <h5 class="pt-2"><img
           id="mlp"
             class=""
@@ -127,7 +127,7 @@
           </li>
           <li class="list-inline-item items-list">
             <div class="px-7">
-              <div class="event-date badge bg-info">Feb 1</div>
+              <div class="event-date badge bg-secondary">Feb 1</div>
               <h5 class="pt-2"><img
           id="ppa"
             class=""
@@ -143,7 +143,7 @@
           </li>
           <li class="list-inline-item items-list">
             <div class="px-7">
-              <div class="event-date badge bg-info">Feb 15</div>
+              <div class="event-date badge bg-secondary">Feb 15</div>
               <h5 class="pt-2"><img
           id="ppa"
             class=""
